--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
+<etiya-navbar></etiya-navbar>
 <div class="container mt-5">
-  <button (click)="increase(3)" class="btn btn-primary">Arttır</button>
-  <p class="text-danger">{{ Counter }}</p>
-
-  <app-product-list></app-product-list>
-  <app-add-product></app-add-product>
+  <router-outlet></router-outlet>
 </div>
