--- a/src/app/pages/add-product/add-product.component.html
+++ b/src/app/pages/add-product/add-product.component.html
@@ -11,16 +11,6 @@
     placeholder="name@example.com" />
 
   <p>{{ email }}</p>
-</div>
 
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label"> Password </label>
-  <input
-    [(ngModel)]="password"
-    type="password"
-    class="form-control"
-    id="exampleFormControlInput1"
-    placeholder="name@example.com" />
-
-  <p>{{ password }}</p>
+  <button (click)="changeEmail()">Tıkla</button>
 </div>
