--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,5 +1,9 @@
+<p>Sepetinizde {{ cartItems.length }} ürün var.</p>
+
 <div class="row">
   <div *ngFor="let p of productList" class="col-4">
-    <etiya-product-card [product]="p"></etiya-product-card>
+    <etiya-product-card
+      (onBtnClick)="addToCart($event)"
+      [product]="p"></etiya-product-card>
   </div>
 </div>
