--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,11 +1,14 @@
 <div class="card" style="width: 18rem">
-  <img src="..." class="card-img-top" alt="..." />
   <div class="card-body">
     <h5 class="card-title">{{ product.contactName }}</h5>
     <p class="card-text">
       Some quick example text to build on the card title and make up the bulk of
       the card's content.
     </p>
-    <a href="#" class="btn btn-primary">Go somewhere 1</a>
+    <button
+      (click)="addToCartEvent(product.contactName)"
+      class="btn btn-primary">
+      Sepete Ekle
+    </button>
   </div>
 </div>
