--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,14 +1,9 @@
-<div class="card" style="width: 18rem">
+<div class="card m-2" style="width: 18rem">
   <div class="card-body">
-    <h5 class="card-title">{{ product.contactName }}</h5>
+    <h5 class="card-title">{{ product.name }}</h5>
     <p class="card-text">
-      Some quick example text to build on the card title and make up the bulk of
-      the card's content.
+      {{ product.unitPrice }}
     </p>
-    <button
-      (click)="addToCartEvent(product.contactName)"
-      class="btn btn-primary">
-      Sepete Ekle
-    </button>
+    <button (click)="addToCartEvent()" class="btn btn-primary">Sepete Ekle</button>
   </div>
 </div>
