--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,8 +1,20 @@
 <div class="card m-2" style="width: 18rem">
-  <div class="card-body">
-    <h5 class="card-title">{{ product.name }}</h5>
-    <p class="card-text">
-      {{ product.unitPrice }}
+  <div
+    [ngClass]="{
+      'card-body': isCard
+    }"
+  >
+    <h5 class="card-title">{{ product.name | uppercase }}</h5>
+    <!-- altgr + > -->
+    <p
+      class="card-text"
+      appOnSale
+      [onSaleColor]="onMouseColor"
+      [onSaleText]="onSaleText"
+      [isOnSale]="product.unitPrice > 30"
+    >
+      {{ product.unitPrice | kdv: 0.8 | currency }}
+      <!-- <span>İndirim!!!</span> -->
     </p>
     <button (click)="addToCartEvent()" class="btn btn-primary">Sepete Ekle</button>
   </div>
