--- a/src/app/features/products/components/product-list/product-list.component.html
+++ b/src/app/features/products/components/product-list/product-list.component.html
@@ -1,25 +1,23 @@
 <p>Sepetinizde {{ cartItems.length }} ürün var.</p>
 
-<div class="row">
-  <ng-container [ngSwitch]="status">
-    <h1 *ngSwitchCase="'init'">Welcome!</h1>
-    <div *ngSwitchCase="'loading'" class="spinner-border text-primary" role="status">
-      <span class="visually-hidden">Loading...</span>
-    </div>
+<ng-container [ngSwitch]="status">
+  <h1 *ngSwitchCase="'init'">Welcome!</h1>
+  <div *ngSwitchCase="'loading'" class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
 
-    <ng-container *ngSwitchCase="'loaded'">
-      <div *ngIfNot="productList.length === 0; else notFound">
-        <div *ngFor="let p of productList" class="col-4">
-          <etiya-product-card (onBtnClick)="addToCart($event)" [product]="p"></etiya-product-card>
-        </div>
+  <ng-container *ngSwitchCase="'loaded'">
+    <div class="row" *ngIfNot="productList.length === 0; else notFound">
+      <div *ngFor="let p of productList" class="col-4">
+        <etiya-product-card (onBtnClick)="addToCart($event)" [product]="p"></etiya-product-card>
       </div>
-    </ng-container>
-
-    <div *ngSwitchDefault class="alert alert-danger" role="alert">
-      A simple danger alert—check it out!
-      <span></span>
     </div>
   </ng-container>
-</div>
+
+  <div *ngSwitchDefault class="alert alert-danger" role="alert">
+    A simple danger alert—check it out!
+    <span></span>
+  </div>
+</ng-container>
 
 <ng-template #notFound>Ürün Yok.</ng-template>
