--- a/src/app/features/products/pages/add-product/add-product.component.html
+++ b/src/app/features/products/pages/add-product/add-product.component.html
@@ -1,14 +1,13 @@
 <div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">
-    Email address
-  </label>
+  <label for="exampleFormControlInput1" class="form-label"> Email address </label>
   <input
     [(ngModel)]="email"
     (ngModelChange)="onEmailChange($event)"
     type="email"
     class="form-control"
     id="exampleFormControlInput1"
-    placeholder="name@example.com" />
+    placeholder="name@example.com"
+  />
 
   <p>{{ email }}</p>
 
