--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -28,6 +28,14 @@
             >Add Product</a
           >
         </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/login" routerLinkActive="active"
+            >Login</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" (click)="testAuth()">Test Auth</a>
+        </li>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
