--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" routerLink="">{{ (tokenUserModel$ | async)?.userName }}</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -14,11 +14,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/homepage" routerLinkActive="active"
-            >Homepage</a
-          >
-        </li>
         <li class="nav-item">
           <a
             class="nav-link"
